--- a/public/_site-assets/css/style.css
+++ b/public/_site-assets/css/style.css
@@ -2,7 +2,7 @@
 Author: iThemesLab
 Author URI: http://ithemeslab.com
 Author Email: ithemeslab@gmail.com */
-/* 
+/*
 ----------Table of Content------------
 ======================================
 01	Global Styles
@@ -32,8 +32,8 @@ Author Email: ithemeslab@gmail.com */
 body {
   font-family: "Open Sans", sans-serif;
   color: #b2b2b2;
-  font-size: 1.5em;
-  line-height: 1.8em;
+  font-size: 1.7em;
+  line-height: 1.9em;
   background: #111010;
   -webkit-backface-visibility: hidden;
 }
@@ -464,6 +464,7 @@ a:focus {
 
 .gold-text {
   color: #bc9355;
+  padding-left: 20px;
 }
 
 /* 1.3 Margins & Paddings */
@@ -528,6 +529,11 @@ a:focus {
   padding: 120px 0;
 }
 
+.pad150 {
+  padding: 150px 0;
+}
+
+
 .pad-t90 {
   padding-top: 90px;
 }
@@ -578,7 +584,7 @@ a:focus {
 }
 
 .mass-head-bg-3 {
-  background-image: url("../images/others/mass-head-bg-3.jpg");
+  background-image: url("../images/background/portfolio.jpg");
 }
 
 .bg-1 {
@@ -1325,7 +1331,8 @@ a:focus {
   margin-right: auto;
 }
 .mass-head-content h2.page-title {
-  color: #bc9355;
+  color: #fff;
+  text-shadow: -11px 13px 14px #000;
   font-size: 36px;
   line-height: 68px;
   text-transform: uppercase;
